# Advent-of-Code-2024

./: .clang-format  CMakeLists.txt  Makefile  README.md
Core/: Core.cpp
Include/: Core.hpp
Source/day01/: main.cc
Source/day02/: main.cc
Source/day03/: main.cc
Source/day04/: main.cc
Source/day05/: main.cc
Source/day06/: main.cc
Source/day07/: main.cc
Source/day08/: main.cc
Source/day10/: main.cc
Source/day11/: main.cc
